--- a/PA-978/components.json
+++ b/PA-978/components.json
@@ -2,5 +2,7 @@
   "leatherman": 4,
   "facter": 3123213123128,
   "pxp_agent": 4,
-  "puppet": 1
+  "puppet": 2,
+  "hiera": 2,
+  "marionette_collective": 2
 }
