--- a/PA-978/components.json
+++ b/PA-978/components.json
@@ -1,8 +1,8 @@
 {
-  "leatherman": 4,
-  "facter": 3123213123128,
-  "pxp_agent": 4,
-  "puppet": 2,
-  "hiera": 2,
-  "marionette_collective": 2
+  "leatherman": 1,
+  "facter": 1,
+  "pxp_agent": 1,
+  "puppet": 1,
+  "hiera": 1,
+  "marionette_collective": 1
 }
